--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
-    "eslint": "8.43.0",
-    "eslint-config-next": "^12.0.4",
+    "eslint": "^8.44.0",
+    "eslint-config-next": "^12.3.4",
     "next": "13.4.7",
     "next-sanity": "^5.1.0",
     "postcss": "8.4.24",
