--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "carousel": "^0.0.3",
     "eslint": "^8.44.0",
     "eslint-config-next": "^12.3.4",
     "next": "13.4.7",
@@ -23,8 +24,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-portable-text": "^0.6.0",
+    "react-slick": "^0.29.0",
     "sanity": "^3.8.3",
+    "slick": "^1.12.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.10"
   }
 }
