--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-multi-carousel": "^2.8.4",
     "react-portable-text": "^0.6.0",
     "react-slick": "^0.29.0",
     "sanity": "^3.8.3",
