--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "^12.3.4",
     "next": "13.4.7",
     "next-sanity": "^5.1.0",
+    "next-sanity-image": "^6.1.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
