--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@vercel/postgres": "^0.4.1",
     "autoprefixer": "10.4.14",
     "carousel": "^0.0.3",
+    "drizzle-orm": "^0.27.0",
     "eslint": "^8.44.0",
     "eslint-config-next": "^12.3.4",
     "next": "13.4.7",
