--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.23.3",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.14.1",
     "@types/node": "20.3.2",
