--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.23.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.14.1",
+    "@stripe/stripe-js": "^2.1.7",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -27,12 +29,16 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-multi-carousel": "^2.8.4",
     "react-portable-text": "^0.6.0",
+    "react-redux": "^8.1.2",
     "react-slick": "^0.29.0",
     "sanity": "^3.8.3",
     "slick": "^1.12.2",
+    "stripe": "^13.8.0",
+    "swiper": "^10.3.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
