--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "carousel": "^0.0.3",
     "drizzle-orm": "^0.27.0",
     "eslint": "^8.44.0",
-    "eslint-config-next": "^12.3.4",
-    "next": "13.4.7",
+    "eslint-config-next": "^13.5.3",
+    "next": "^13.5.3",
     "next-sanity": "^5.1.0",
     "next-sanity-image": "^6.1.0",
     "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-multi-carousel": "^2.8.4",
@@ -38,6 +38,7 @@
     "sanity": "^3.8.3",
     "slick": "^1.12.2",
     "stripe": "^13.8.0",
+    "styled-components": "^6.0.8",
     "swiper": "^10.3.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
